Initial port of C code to Rust (calculates correctly w/ single thread)

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,7 @@
 [package]
 name = "satin-rust"
 version = "0.1.0"
-authors = ["Alan Stewart <alankstewart@gmail.com>"]
+authors = ["ben.alex@acegi.com.au"]
 
 [dependencies]
+time = "0.1"
